--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/jest": "^29.4.0",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.27",
+    "@types/redux-persist": "^4.3.1",
     "axios": "^1.4.0",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
